// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`outlet > _content from current match 1`] = `
<div>
  <div
    data-testid="test-wrapper"
  >
    <div>
      content#Main
    </div>
  </div>
</div>
`;

exports[`outlet > _content from first match 1`] = `
<div>
  <div
    data-testid="test-wrapper"
  >
    <div>
      content#Main
    </div>
  </div>
</div>
`;

exports[`outlet > _content from next match 1`] = `
<div>
  <div
    data-testid="test-wrapper"
  >
    <div>
      next content#Main
    </div>
  </div>
</div>
`;

exports[`outlet > _fallback from current match 1`] = `
<div>
  <div
    data-testid="test-wrapper"
  >
    <div>
      fallback#Main
    </div>
  </div>
</div>
`;

exports[`outlet > _layout from first match 1`] = `
<div>
  <div
    data-testid="test-wrapper"
  >
    <div>
      layout#Main
    </div>
  </div>
</div>
`;

exports[`outlet > _layout from next match 1`] = `
<div>
  <div
    data-testid="test-wrapper"
  >
    <div>
      next layout#Main
    </div>
  </div>
</div>
`;

exports[`outlet > named root fallback 1`] = `
<div>
  <div
    data-testid="test-wrapper"
  >
    <div>
      fallback A
    </div>
  </div>
</div>
`;

exports[`outlet > no match 1`] = `
<div>
  <div
    data-testid="test-wrapper"
  />
</div>
`;

exports[`outlet > root fallback 1`] = `
<div>
  <div
    data-testid="test-wrapper"
  >
    <div>
      fallback
    </div>
  </div>
</div>
`;
